Bug 152791 - Konqueror don't load some pages with javascript.
Summary: Konqueror don't load some pages with javascript.
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-23 17:00 UTC by Alex Fiestas
Modified: 2007-11-23 20:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Fiestas 2007-11-23 17:00:32 UTC
Version:            (using KDE KDE 3.96.0)
Installed from:    Compiled From Sources
OS:                Linux

Some pages that contains the cross-browser javascript framework don't load correctly with konqueror.

I reported 1 week ago a crash bug relationship with that framework. Now the crash bug is fixed but now the contents don't load correctly.

Examples pages:
http://demo.eyeos.org 
http://www.cross-browser.com/x/examples/tabpanelgroup.php

Crash bug id: #152005

Thanks!
Comment 1 Maksim Orlovich 2007-11-23 18:45:35 UTC
Yeah, confirmed. Odd, it worked just a couple days ago. May be I should fix the JS debugger or something. 
Comment 2 Maksim Orlovich 2007-11-23 20:07:29 UTC
SVN commit 740634 by orlovich:

I can't: 1) read 2) test stuff properly.

Fix #152791: we do want to return an empty string on known 
but not set CSS properties, just like KDE3 did (and which I missed)

BUG:152791



 M  +3 -2      kjs_css.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=740634
Comment 3 Maksim Orlovich 2007-11-23 20:09:47 UTC
SVN commit 740635 by orlovich:

Revise to also incorporate #152791
CCBUG:152791


 M  +16 -2     baseline/ecma/152005.html-dom  
 M  +15 -6     baseline/ecma/152005.html-render  
 M  +8 -0      tests/ecma/152005.html  


WebSVN link: http://websvn.kde.org/?view=rev&revision=740635