I can't: 1) read 2) test stuff properly.

Fix #152791: we do want to return an empty string on known 
but not set CSS properties, just like KDE3 did (and which I missed)

BUG:152791


svn path=/trunk/KDE/kdelibs/; revision=740634